// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth lib #load should load the correct model 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "Harvey",
  "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  "lastName": "Dentest",
  "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
  "username": "manager@test.com",
}
`;

exports[`auth lib #login should return a new session and the user model 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "Harvey",
  "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  "lastName": "Dentest",
  "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
  "username": "manager@test.com",
}
`;

exports[`auth lib #login should return a new session and the user model 2`] = `
Object {
  "modelId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`auth lib #signup should return create the user and return it with a session 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "Gary",
  "id": "31354241-3652-4792-bae5-5bfed53d37b7",
  "lastName": "Oldman",
  "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
  "username": "newuser@test.com",
}
`;

exports[`auth lib #signup should return create the user and return it with a session 2`] = `
Object {
  "modelId": "31354241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`auth lib #updateSession should remove the session and return a new one 1`] = `
Object {
  "accountId": "52954241-3652-4792-bae5-5bfed53d37b7",
  "modelId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;
